--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -12,7 +12,18 @@
 </head>
 
 <body>
-   
+   <header>
+       <nav>
+           <div class="nav-item app">
+            <i class="fas fa-door-open">Get the app</i>
+           </div>
+           <div class="container">
+           <div class="nav-item">Login</div>
+           <div class="nav-item">SignUp</div>
+           </div>
+           
+       </nav>
+   </header>
 </body>
 
 </html>
