--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -43,6 +43,19 @@
        </div>
        
    </header>
+   <section class="nearby">
+       <div class="container">
+           <h3>Popular localities in and around <strong>Ahmedabad, Gujrat</strong></h3>
+           <div class="box">
+               <div>
+                   Ahmedabad
+               </div>
+               <div>
+                   <i class="fas fa-chevron-right"></i>
+               </div>
+           </div>
+       </div>
+   </section>
 </body>
 
 </html>
