--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -56,6 +56,43 @@
            </div>
        </div>
    </section>
+   <section class="app">
+       <div class="container">
+           <img src="./assets/images/app.png" alt="Download not Zomato app">
+           <div class="form">
+               <h1>Get the Zomato App</h1>
+               <small>We'll send you a link , open it on your phone to download the App</small>
+               <div class="radio">
+                <div>
+
+                <input type="radio" id="email" name="radio-group" checked />
+                <label for="email">Email</label>
+                
+                </div>
+
+                <div>
+
+                <input type="radio" id="phone" name="radio-group" checked />
+                <label for="phone">Phone</label>
+
+                </div>
+
+                <div class="input">
+                    <input type="email" placeholder="Email">
+                    <button>Share the App link</button>
+                </div>
+
+                <div class="download">
+                    Download the app from
+                    <img src="./assets/images/appStore.png" alt="Ios app store">
+                    <img src="./assets/images/playStore.png" alt="Android app store">
+                </div>
+
+  
+               </div>
+           </div>
+       </div>
+   </section>
 </body>
 
 </html>
