Css for app section

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -84,8 +84,10 @@
 
                 <div class="download">
                     Download the app from
+                    <div class="img">
                     <img src="./assets/images/appStore.png" alt="Ios app store">
                     <img src="./assets/images/playStore.png" alt="Android app store">
+                    </div>
                 </div>
 
   
