Options section complete

--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -85,13 +85,76 @@
                 <div class="download">
                     Download the app from
                     <div class="img">
-                    <img src="./assets/images/appStore.png" alt="Ios app store">
-                    <img src="./assets/images/playStore.png" alt="Android app store">
+                        <img src="./assets/images/appStore.png" alt="Ios app store">
+                        <img src="./assets/images/playStore.png" alt="Android app store">
                     </div>
                 </div>
 
   
                </div>
+           </div>
+       </div>
+   </section>
+   <section class="options">
+       <div class="container">
+           <div>
+           <h3>Popular Foods near me</h3>
+           <ul >
+               <li>
+                   <a href="#">American food near me</a>
+               </li>
+               <li>
+                <a href="#">American food near me</a>
+            </li>
+               <li>
+                <a href="#">American food near me</a>
+            </li>
+            <li>
+                <a href="#">American food near me</a>
+            </li>
+            <li>
+                <a href="#">American food near me</a>
+            </li>
+            <li>
+                <a href="#">American food near me</a>
+            </li>
+            <li>
+                <a href="#">American food near me</a>
+            </li>
+            <li>
+                <a href="#">American food near me</a>
+            </li>
+           </ul>
+           </div>
+
+           <div>
+           <h3>Popular Restaurants near me</h3>
+           <ul>
+            <li>
+                <a href="#">Dominoz</a>
+            </li>
+            <li>
+                <a href="#">Dominoz</a>
+            </li>
+            <li>
+                <a href="#">Dominoz</a>
+            </li>
+            <li>
+                <a href="#">Dominoz</a>
+            </li>
+            <li>
+                <a href="#">Dominoz</a>
+            </li>
+            <li>
+                <a href="#">Dominoz</a>
+            </li>
+            <li>
+                <a href="#">Dominoz</a>
+            </li>
+            <li>
+                <a href="#">Dominoz</a>
+            </li>
+           </ul>
            </div>
        </div>
    </section>
